[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fade In/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://ScollingBackground.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Space24.tres" type="DynamicFont" id=3]
[ext_resource path="res://Orvile Fly.tscn" type="PackedScene" id=4]
[ext_resource path="res://Buttons/Continue Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Buttons/New Game Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Buttons/Options Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sets/stars.png" type="Texture" id=8]
[ext_resource path="res://Assets/Title.png" type="Texture" id=9]
[ext_resource path="res://title_screen.gd" type="Script" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item; 
uniform float scroll_speed; 
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE,shifteduv);
	COLOR = col;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.667089, 0.667353 )
texture = ExtResource( 8 )
stretch_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_speed = 0.05

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 52.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1080.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
stretch_mode = 5

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 254.0
margin_right = 1080.0
margin_bottom = 474.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 538.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 80.0
margin_right = 538.0
margin_bottom = 140.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 7 )]
margin_top = 160.0
margin_right = 538.0
margin_bottom = 220.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Orville Ship" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 269.0
margin_top = 110.0
margin_right = 269.0
margin_bottom = 110.0

[node name="Node2D" parent="Menu/CenterRow/CenterContainer" instance=ExtResource( 4 )]
position = Vector2( -700.391, -266.227 )

[node name="Version Label" type="Label" parent="Menu"]
margin_top = 478.0
margin_right = 1080.0
margin_bottom = 588.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Version 1.2.2 ep. 1
Phenox Games"
valign = 1

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Audio Effect" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio Effect"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_Fade_In_fade_finished"]
